<resources>
    <string name="app_name">Zodiac_Info</string>
    <string name="capricorn">22/12 - 19/01</string>
    <string name="aquarius">20/01 - 18/02</string>
    <string name="pisces">19/02 - 20/03</string>
    <string name="aries">21/03 - 19/04</string>
    <string name="taurus">20/04 - 20/05</string>
    <string name="gemini">21/05 - 20/06</string>
    <string name="cancer">21/06 - 22/07</string>
    <string name="leo">23/07 - 22/08</string>
    <string name="virgo">23/08 - 22/09</string>
    <string name="libra">23/09 - 22/10</string>
    <string name="scorpio">23/10 - 21/11</string>
    <string name="sagittarius">22/11 - 21/12</string>
</resources>
